# Shapes-python-pillow-canvas

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  debug_canvas.py  lines_canvas_coordinates_json_data.py  lines_canvas_coordinates_json_data_input_json.json  list_shapes.py  main.py  poetry_readme.md  pyproject.toml  pytest.ini  setup.py  test_grid.py  test_new_shapes.py
config/: lines_canvas_coordinates_json_data_input_json.json
docs/: CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  HOW-TO-RUN.md  MIGRATION.md  NEW_SHAPES.md  Notes.md  PROJECT_STRUCTURE.md  QUICKSTART.md  SECURITY.md  UPGRADE_SUMMARY.md
examples/: all_new_shapes_demo.json  basic_shapes.json  demo.py
legacy/: README.md  lines_canvas_coordinates_json_data.py
src/shape_canvas/: __init__.py  canvas.py  cli.py  config.py  exceptions.py  shapes.py
tests/: __init__.py  test_canvas.py  test_shapes.py
